# KelpieWebTipping

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml
backend/: Cargo.toml
backend/sql/: schema.sql
backend/src/: lib.rs  main.rs
backend/src/db/: game.rs  mod.rs  reporting.rs  round.rs  team.rs  tip.rs  tipper.rs
backend/src/models/: game.rs  mod.rs  round.rs  team.rs  tip.rs  tipper.rs
backend/src/routes/: mod.rs  reports.rs  rounds.rs  teams.rs  tippers.rs  tips.rs
backend/src/util/: game_allocator.rs  logging.rs  mod.rs
backend/static/: frontend-9c3b211341b8a693.js  frontend-9c3b211341b8a693_bg.wasm  frontend-de5efa9384345ed4.js  frontend-de5efa9384345ed4_bg.wasm  kelpie-fa63dccfcd07411b.css
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: add_round.rs  buttons.rs  edit_round.rs  icon_button.rs  icons.rs  mod.rs  round_list.rs  team_list.rs  tip_view.rs  tipper_list.rs  tips.rs
frontend/src/components/reports/: leaderboard.rs  mod.rs
frontend/src/models/: mod.rs  round.rs  team.rs  tipper.rs  tippers.rs
frontend/styles/: kelpie.css
kelpie_models/: Cargo.toml
kelpie_models/src/: game.rs  lib.rs  round.rs  team.rs  tip.rs  tipper.rs
logs/: kelpietipping.log.2025-06-22  kelpietipping.log.2025-06-23  kelpietipping.log.2025-06-24  kelpietipping.log.2025-06-25  kelpietipping.log.2025-06-26  kelpietipping.log.2025-06-27  kelpietipping.log.2025-06-29
