[package]
name = "backend"
edition = "2021"
resolver = "2"

[dependencies]
chrono = "0.4.38"
dirs-next = "2.0.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
home = "0.5.9"
log = "0.4"
preferences = "2.0.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
rolling-file = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.2"
sqlx = { version = "0.8.5", features = ["runtime-async-std", "postgres", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
