[package]
name = "backend"
edition = "2021"
resolver = "2"

[dependencies]
kelpie_models = { path = "../kelpie_models" }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }

serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]
