[package]
name = "frontend"
edition = "2021"
resolver = "2"

[dependencies]
gloo-net = "0.6.0"
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
serde = "1.0.219"
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = ["CssStyleDeclaration"] }
